@@ -1,4 +1,4 @@
-import { open, rasterize, initialize, reproject } from './api.js';
+import { open, rasterize, initialize, reset, reproject } from './api.js';
 import { GDALDataset } from './gdalDataset.js';
 
-export default { open, rasterize, GDALDataset, initialize, reproject };
+export default { open, rasterize, GDALDataset, initialize, reset, reproject };
