@@ -50,129 +50,121 @@ self.Module = {
     // Optimized builds contain a .js.mem file which is loaded asynchronously;
     // this waits until that has finished before performing further setup.
     onRuntimeInitialized: function () {
-        try {
-            // Initialize GDAL
-            self.Module.ccall('GDALAllRegister', null, [], []);
+        // Initialize GDAL
+        self.Module.ccall('GDALAllRegister', null, [], []);
 
-            // Set up error handling
-            errorHandling.CPLErrorReset = self.Module.cwrap('CPLErrorReset', null, []);
-            errorHandling.CPLGetLastErrorMsg = self.Module.cwrap(
-                'CPLGetLastErrorMsg',
-                'string',
-                []
-            );
-            errorHandling.CPLGetLastErrorNo = self.Module.cwrap('CPLGetLastErrorNo', 'number', []);
-            errorHandling.CPLGetLastErrorType = self.Module.cwrap(
-                'CPLGetLastErrorType',
-                'number',
-                []
-            );
-            // Get a "function pointer" to the built-in quiet error handler so that errors don't
-            // cause tons of console noise.
-            const cplQuietFnPtr = addFunction(
-                self.Module.cwrap('CPLQuietErrorHandler', null, ['number', 'number', 'string']),
-                'viii'
-            );
+        // Set up error handling
+        errorHandling.CPLErrorReset = self.Module.cwrap('CPLErrorReset', null, []);
+        errorHandling.CPLGetLastErrorMsg = self.Module.cwrap('CPLGetLastErrorMsg', 'string', []);
+        errorHandling.CPLGetLastErrorNo = self.Module.cwrap('CPLGetLastErrorNo', 'number', []);
+        errorHandling.CPLGetLastErrorType = self.Module.cwrap('CPLGetLastErrorType', 'number', []);
+        // Get a "function pointer" to the built-in quiet error handler so that errors don't
+        // cause tons of console noise.
+        const cplQuietFnPtr = addFunction(
+            self.Module.cwrap('CPLQuietErrorHandler', null, ['number', 'number', 'string']),
+            'viii'
+        );
 
-            // Then set the error handler to the quiet handler.
-            self.Module.ccall('CPLSetErrorHandler', 'number', ['number'], [cplQuietFnPtr]);
+        // Then set the error handler to the quiet handler.
+        self.Module.ccall('CPLSetErrorHandler', 'number', ['number'], [cplQuietFnPtr]);
 
-            // Set up JS proxy functions
-            // Note that JS Number types are used to represent pointers, which means that
-            // any time we want to pass a pointer to an object, such as in GDALOpen, which in
-            // C returns a pointer to a GDALDataset, we need to use 'number'.
-            //
-            registry.GDALOpen = wGDALOpen(
-                self.Module.cwrap('GDALOpen', 'number', ['string']),
-                errorHandling,
-                DATASETPATH
-            );
-            registry.GDALRasterize = wGDALRasterize(
-                self.Module.cwrap('GDALRasterize', 'number', [
-                    'string', // Destination dataset path or NULL
-                    'number', // GDALDatasetH destination dataset or NULL
-                    'number', // GDALDatasetH source dataset or NULL
-                    'number', // GDALRasterizeOptions * or NULL
-                    'number', // int * to use for error reporting
-                ]),
-                errorHandling,
-                DATASETPATH
-            );
-            registry.GDALClose = wGDALClose(
-                self.Module.cwrap('GDALClose', 'number', ['number']),
-                errorHandling
-            );
-            registry.GDALGetRasterCount = wGDALGetRasterCount(
-                self.Module.cwrap('GDALGetRasterCount', 'number', ['number']),
-                errorHandling
-            );
-            registry.GDALGetRasterXSize = wGDALGetRasterXSize(
-                self.Module.cwrap('GDALGetRasterXSize', 'number', ['number']),
-                errorHandling
-            );
-            registry.GDALGetRasterYSize = wGDALGetRasterYSize(
-                self.Module.cwrap('GDALGetRasterYSize', 'number', ['number']),
-                errorHandling
-            );
-            registry.GDALGetProjectionRef = wGDALGetProjectionRef(
-                self.Module.cwrap('GDALGetProjectionRef', 'string', ['number']),
-                errorHandling
-            );
-            registry.GDALGetGeoTransform = wGDALGetGeoTransform(
-                self.Module.cwrap('GDALGetGeoTransform', 'number', ['number', 'number']),
-                errorHandling
-            );
-            registry.GDALTranslate = wGDALTranslate(
-                self.Module.cwrap('GDALTranslate', 'number', [
-                    'string', // Output path
-                    'number', // GDALDatasetH source dataset
-                    'number', // GDALTranslateOptions *
-                    'number', // int * to use for error reporting
-                ]),
-                errorHandling,
-                DATASETPATH
-            );
-            registry.GDALWarp = wGDALWarp(
-                self.Module.cwrap('GDALWarp', 'number', [
-                    'string', // Destination dataset path or NULL
-                    'number', // GDALDatasetH destination dataset or NULL
-                    'number', // Number of input datasets
-                    'number', // GDALDatasetH * list of source datasets
-                    'number', // GDALWarpAppOptions *
-                    'number', // int * to use for error reporting
-                ]),
-                errorHandling,
-                DATASETPATH
-            );
-            registry.GDALDEMProcessing = wGDALDEMProcessing(
-                self.Module.cwrap('GDALDEMProcessing', 'number', [
-                    'string', // Destination dataset path or NULL
-                    'number', // GDALDatasetH destination dataset
-                    // eslint-disable-next-line max-len
-                    'string', // The processing to apply (one of "hillshade", "slope", "aspect", "color-relief", "TRI", "TPI", "roughness")
-                    'string', // Color file path (when previous is "hillshade") or NULL (otherwise)
-                    'number', // GDALDEMProcessingOptions *
-                    'number', // int * to use for error reporting
-                ]),
-                errorHandling,
-                DATASETPATH
-            );
-            registry.LoamFlushFS = function () {
-                let datasetFolders = FS.lookupPath(DATASETPATH).node.contents;
+        // Set up JS proxy functions
+        // Note that JS Number types are used to represent pointers, which means that
+        // any time we want to pass a pointer to an object, such as in GDALOpen, which in
+        // C returns a pointer to a GDALDataset, we need to use 'number'.
+        //
+        registry.GDALOpen = wGDALOpen(
+            self.Module.cwrap('GDALOpen', 'number', ['string']),
+            errorHandling,
+            DATASETPATH
+        );
+        registry.GDALRasterize = wGDALRasterize(
+            self.Module.cwrap('GDALRasterize', 'number', [
+                'string', // Destination dataset path or NULL
+                'number', // GDALDatasetH destination dataset or NULL
+                'number', // GDALDatasetH source dataset or NULL
+                'number', // GDALRasterizeOptions * or NULL
+                'number', // int * to use for error reporting
+            ]),
+            errorHandling,
+            DATASETPATH
+        );
+        registry.GDALClose = wGDALClose(
+            self.Module.cwrap('GDALClose', 'number', ['number']),
+            errorHandling
+        );
+        registry.GDALGetRasterCount = wGDALGetRasterCount(
+            self.Module.cwrap('GDALGetRasterCount', 'number', ['number']),
+            errorHandling
+        );
+        registry.GDALGetRasterXSize = wGDALGetRasterXSize(
+            self.Module.cwrap('GDALGetRasterXSize', 'number', ['number']),
+            errorHandling
+        );
+        registry.GDALGetRasterYSize = wGDALGetRasterYSize(
+            self.Module.cwrap('GDALGetRasterYSize', 'number', ['number']),
+            errorHandling
+        );
+        registry.GDALGetProjectionRef = wGDALGetProjectionRef(
+            self.Module.cwrap('GDALGetProjectionRef', 'string', ['number']),
+            errorHandling
+        );
+        registry.GDALGetGeoTransform = wGDALGetGeoTransform(
+            self.Module.cwrap('GDALGetGeoTransform', 'number', ['number', 'number']),
+            errorHandling
+        );
+        registry.GDALTranslate = wGDALTranslate(
+            self.Module.cwrap('GDALTranslate', 'number', [
+                'string', // Output path
+                'number', // GDALDatasetH source dataset
+                'number', // GDALTranslateOptions *
+                'number', // int * to use for error reporting
+            ]),
+            errorHandling,
+            DATASETPATH
+        );
+        registry.GDALWarp = wGDALWarp(
+            self.Module.cwrap('GDALWarp', 'number', [
+                'string', // Destination dataset path or NULL
+                'number', // GDALDatasetH destination dataset or NULL
+                'number', // Number of input datasets
+                'number', // GDALDatasetH * list of source datasets
+                'number', // GDALWarpAppOptions *
+                'number', // int * to use for error reporting
+            ]),
+            errorHandling,
+            DATASETPATH
+        );
+        registry.GDALDEMProcessing = wGDALDEMProcessing(
+            self.Module.cwrap('GDALDEMProcessing', 'number', [
+                'string', // Destination dataset path or NULL
+                'number', // GDALDatasetH destination dataset
+                // eslint-disable-next-line max-len
+                'string', // The processing to apply (one of "hillshade", "slope", "aspect", "color-relief", "TRI", "TPI", "roughness")
+                'string', // Color file path (when previous is "hillshade") or NULL (otherwise)
+                'number', // GDALDEMProcessingOptions *
+                'number', // int * to use for error reporting
+            ]),
+            errorHandling,
+            DATASETPATH
+        );
+        registry.LoamFlushFS = function () {
+            let datasetFolders = FS.lookupPath(DATASETPATH).node.contents;
 
-                Object.values(datasetFolders).forEach((node) => {
-                    FS.unmount(FS.getPath(node));
-                    FS.rmdir(FS.getPath(node));
-                });
-                return true;
-            };
-            registry.LoamReproject = wReproject;
-            initialized = true;
-            postMessage({ ready: true });
-        } catch (error) {
-            console.error(error);
-            postMessage({ error: error });
-        }
+            Object.values(datasetFolders).forEach((node) => {
+                FS.unmount(FS.getPath(node));
+                FS.rmdir(FS.getPath(node));
+            });
+            return true;
+        };
+        registry.LoamReproject = wReproject;
+
+        // Errors in this function will result in onerror() being called in the main thread, which
+        // will reject the initialization promise and tear down the worker, so there's no need to do
+        // separate error handling here -- if something goes wrong prior to this point, it's
+        // presumably fatal.
+        initialized = true;
+        postMessage({ ready: true });
     },
 };
 
@@ -244,7 +236,7 @@ onmessage = function (msg) {
             postMessage({
                 success: false,
                 message:
-                // eslint-disable-next-line max-len
+                    // eslint-disable-next-line max-len
                     'Worker could not parse message: either func + args or accessor + dataset is required',
                 id: msg.data.id,
             });
